@@ -126,7 +126,9 @@ body.woocommerce-account.woocommerce-edit-account #primary.content-area { margin
 
 body.logged-in.woocommerce-account.woocommerce-lost-password article.page { padding: 8.4rem 0; }
 
-body:not(.logged-in).woocommerce-account.woocommerce-lost-password .wrap.container .archive-header-wrapper.banner-page { display: block !important; padding: 0; margin: 0 -15px; height: 200px; width: 100vw; }
+body:not(.logged-in).woocommerce-account.woocommerce-lost-password .wrap.container { width: 100%; }
+
+body:not(.logged-in).woocommerce-account.woocommerce-lost-password .wrap.container .archive-header-wrapper.banner-page { display: block !important; padding: 0; height: 200px; width: 100vw; }
 
 body:not(.logged-in).woocommerce-account.woocommerce-lost-password .wrap.container .archive-header-wrapper.banner-page .archive-header { height: 100%; display: -ms-flexbox; display: flex; -ms-flex-pack: center; justify-content: center; -ms-flex-align: center; align-items: center; }
 
