@@ -54,10 +54,10 @@ body.logged-in.woocommerce-account.woocommerce-lost-password {
 }
 body:not(.logged-in).woocommerce-account.woocommerce-lost-password {
 	.wrap.container {
+		width: 100%;
 		.archive-header-wrapper.banner-page {
 			display: block !important;
 			padding: 0;
-			margin: 0 -15px;
 			height: 200px;
 			width: 100vw;
 			.archive-header {
